--- a/.github/workflows/app2-container.yml
+++ b/.github/workflows/app2-container.yml
@@ -16,12 +16,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: ACTIONS_ALLOW_UNSECURE_COMMANDS
+        id: ACTIONS_ALLOW_UNSECURE_COMMANDS
+        run: echo 'ACTIONS_ALLOW_UNSECURE_COMMANDS=true' >> $GITHUB_ENV
+
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run build
 
       - uses: chrislennon/action-aws-cli@v1.1
-      - run: |
-          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
-          aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/app2/container/latest
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/app2/container/latest
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
